--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,6 +24,18 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
@@ -42,4 +54,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
